services/infra/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress  # Nome do recurso Ingress
spec:
  ingressClassName: nginx  # Classe do Ingress para especificar qual controlador de Ingress usar (nginx)
  rules:
    - host: hello-world.example  # Nome do host para o qual a regra se aplica
      http:
        paths:
          - path: /  # Caminho que será capturado pelo Ingress (raiz do host)
            pathType: Prefix  # Tipo de caminho (Prefixo) que será capturado
            backend:
              service:
                name: web  # Nome do serviço ao qual o tráfego será direcionado
                port:
                  number: 8080  # Porta do serviço que receberá o tráfego
